CodeSamples/Kubernetes/class0407/firefox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firefox-pod
  labels:
    app: firefox
spec:
  containers:
  - name: firefox
    image: lscr.io/linuxserver/firefox:latest
    ports:
      - containerPort: 3001
