CodeSamples/Kubernetes/class0407/nginx-volumne-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
      - containerPort: 80
    volumeMounts:
    - name: hp-pendrive
      mountPath: /usr/share/nginx/html/
    - name: sandisk-pendrive
      mountPath: /home/
  volumes: 
  - name: sandisk-pendrive
    emptyDir:
      sizeLimit: 500Mi
  - name: hp-pendrive
    emptyDir:
      sizeLimit: 500Mi
