CodeSamples/Kubernetes/class0407/nginx-pod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-policy
spec: 
  podSelector:
    matchLabels:
      app: nginx
      topology.kubernetes.io/region: eastus
  ingress: 
  - ports:
    - port: 80
    - port: 9090
    - port: 8080
